Add indentation to 4 whitespaces

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -15,4 +15,7 @@ set-option -g status-left-length 40
 set-option -g status-right-length 40
 set-option -g status-left "#(pwd)"
 set-option -g status-right "#(date)"
+
+# change tab size to 4 whitespaces
+set tabstop=4
 #-------------------------------------------------------#
