Add .vimrc file

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -16,6 +16,6 @@ set-option -g status-right-length 40
 set-option -g status-left "#(pwd)"
 set-option -g status-right "#(date)"
 
-# change tab size to 4 whitespaces
-set tabstop=4
+# enable mouse
+set -g mouse on
 #-------------------------------------------------------#
